Fix styling issues
There were a lot of issues with things overlapping like they shouldnt, things being the wrong size, etc. I fixed all of these issues. I got rid of the stylized accents (the little bubbles after a section). These seemed to be a big cause of issues.

--- a/styles.css
+++ b/styles.css
@@ -124,8 +124,10 @@ nav a:hover {
 }
 
 section {
-  height: 100vh;
+  /* height: 100vh; */
+  height: max-content;
   width: 100%;
+  padding: 50px 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -147,56 +149,16 @@ section:nth-child(odd) {
 #testimonials {
   position: relative;
 }
-#evidence::after,
-#testimonials::after {
-  content: "";
-  height: 100px;
-  width: 100%;
-  background: #333;
-  position: absolute;
-  bottom: -50px;
-  left: 0;
-  border-radius: 50%;
-  z-index: 1;
-}
 #evidence .tagline {
   margin: 20px;
 }
 .photos {
   width: 60%;
-  height: 80vh;
-  display: grid;
-  grid-template-areas:
-    "ghost1 ghost1 ghost2"
-    "ghost1 ghost1 ghost3"
-    "ghost4 ghost5 ghost5"
-    "ghost6 ghost5 ghost5";
-  grid-gap: 5px;
-  z-index: 2;
-}
-.ghost1 {
-  background: url("https://images.unsplash.com/photo-1489179070830-36477bd83c93?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80");
-  grid-area: ghost1;
-}
-.ghost2 {
-  background: url("https://images.unsplash.com/photo-1465416532510-98090cdedec7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
-  grid-area: ghost2;
-}
-.ghost3 {
-  background: url("https://images.unsplash.com/photo-1499532744860-fb7526b66e7b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1114&q=80");
-  grid-area: ghost3;
-}
-.ghost4 {
-  background: url("https://images.unsplash.com/photo-1440882616325-43e474ece3d0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1055&q=80");
-  grid-area: ghost4;
-}
-.ghost5 {
-  background: url("https://images.unsplash.com/photo-1490128079522-6ebfd232bb84?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
-  grid-area: ghost5;
-}
-.ghost6 {
-  background: url("https://images.unsplash.com/photo-1492500318351-274a118407c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
-  grid-area: ghost6;
+  height: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .ghost-photo {
   background-size: cover;
@@ -206,6 +168,9 @@ section:nth-child(odd) {
   align-items: center;
   justify-content: center;
   border-radius: 5px;
+  margin: 10px 0;
+  width: 45%;
+  height: 30%;
 }
 .ghost-photo p {
   width: 100%;
@@ -226,20 +191,7 @@ section:nth-child(odd) {
 
 #places,
 #contact {
-  height: 100vh;
-  width: 100%;
   position: relative;
-}
-#places::after {
-  content: "";
-  height: 100px;
-  width: 100%;
-  background: rgb(58, 58, 58);
-  position: absolute;
-  bottom: -50px;
-  left: 0;
-  border-radius: 50%;
-  z-index: 1;
 }
 #places h2,
 #contact h2 {
@@ -249,9 +201,9 @@ section:nth-child(odd) {
 }
 #places .place-cards .card {
   width: 50%;
-  height: 200px;
+  height: 150px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin: 50px auto;
 }
@@ -265,6 +217,9 @@ section:nth-child(odd) {
   margin: 0 auto;
 }
 
+#testimonials h2 {
+  font-size: 2rem;
+}
 .testimonies {
   width: 70%;
   margin: 0 auto;
@@ -274,14 +229,16 @@ section:nth-child(odd) {
   flex-wrap: wrap;
 }
 #testimonials .testimonies .card {
-  border: solid 5px #a7b150;
+  border: solid 5px white;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   padding: 20px;
   box-sizing: border-box;
-  width: 500px;
+  width: 40%;
+  height: 225px;
   margin: 10px;
+  border-radius: 10px;
 }
 #testimonials .testimonies .card div {
   width: 75%;
@@ -301,7 +258,7 @@ section:nth-child(odd) {
 }
 
 #contact .tagline {
-  margin-bottom: 100px;
+  margin-bottom: 25px;
 }
 form {
   display: flex;
@@ -378,12 +335,10 @@ form button:active {
 footer {
   width: 100%;
   height: 50px;
+  border-top: solid 1px white;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  position: absolute;
-  bottom: 0;
-  z-index: 50;
 }
 footer a {
   color: #a7b150;
@@ -392,4 +347,14 @@ footer a {
 }
 footer a:hover {
   color: rgb(173, 202, 79);
+}
+@media screen and (max-width: 1440px) {
+  .profile-picture {
+    height: 200px;
+    width: 200px;
+    transform: translateY(-150px);
+  }
+  .fa-camera-retro {
+    font-size: 8rem;
+  }
 }
